--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-DB_HOST=dpg-cp29i1a1hbls739d3b5g-a.oregon-postgres.render.com
-DB_NAME=szmulmed_h6ge
-DB_USER=szmulinho
-DB_PASSWORD=K3oHloNswQcNq0AJgbMP1vrcoQKuxz4x
+DB_HOST=dpg-d6ade6248b3s73bro6eg-a
+dpg-cp29i1a1hbls739d3b5g-a.oregon-postgres.render.com
+DB_NAME=szmulmed_ctqa
+szmulmed_h6ge
+DB_USER=szmulmed_ctqa_user
+szmulinho
+DB_PASSWORD=ggZ6XtyZKtgEoFFfGfY8KOaieIOu6nD4u
+K3oHloNswQcNq0AJgbMP1vrcoQKuxz4x
 DB_PORT=5432
+5432
 SSL_MODE=require
 
